assets/scss/common/_glossary.scss
.glossary-tooltip {
  display: inline-block;
  position: relative;
  border-bottom: 1px dashed $body-color;
  color: $body-color;
  text-decoration: none !important;
  transition: opacity 0.3s, visibility 0.3s;
}

.glossary-tooltip::before {
  content: attr(data-title);
  background: black;
  color: white;
  text-align: center;
  position: absolute;
  transform: translateY(-100%);
  width: 250px;
  padding: 10px;
  border-radius: 10px;
  opacity: 0;
  transition: 0.3s opacity;
}

.glossary-tooltip:hover::before {
  display: block;
  opacity: 1;
}

[data-dark-mode] .glossary-tooltip {
  color: $body-color-dark;
  border-bottom: 1px dashed $body-color-dark;
}

